# DnD

./: .gitignore  CMakeLists.txt  README.md  common.h  main_debug.cpp
DnD5eCharBuilder/: pc.cpp  pc.h  pc_class.cpp  pc_class.h  pc_race.cpp  pc_race.h
DnDObjects/: dice.hpp  dnd_objects.h
util/: print_functions.cpp  print_functions.h  utilities.h
